--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
-    <body class="bg-gray-100 text-center p-10">
+    <body class="light bg-gray-50 text-center">
+        
+        <div class="container mx-auto">
+
+            <header class="w-full bg-gray-50 text-black p-4 text-center">
+                <div class="relative p-6">
+                    <img src="../../images/logo.png" alt="Logo" class="absolute top-0 left-0 h-20">    
+                    <h1 class="text-2xl font-bold">My Video Site</h1>
+                </div>
+            </header>
+
+            <!-- slider -->
+
+            <div class="slider relative">
+                <div class="slider-inner h-26">
+                    <div class="slider-wrapper">
+                        
+                    </div>
+                </div>
+            </div>
+
+
+    </div>
         <script src="./js/script.js"></script>
     </body>
 </html>
