make, vidoe page and custom video controls

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     </head>
     <body class="light bg-gray-50 text-center">
         
-    <div id="main" class="container mx-auto">
+    <div id="main" class="max-w-screen-2xl mx-auto px-20">
 
 
     </div>
