add dark theme, bug fixing

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="dark" lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Video Site</title>
     </head>
-    <body class="light bg-gray-50 text-center">
+    <body class="bg-gray-50 text-center">
         
-    <div id="main" class="max-w-screen-2xl mx-auto px-5 md:px-20">
+    <div id="main" class="max-w-screen-2xl mx-auto px-5 md:px-20 dark:bg-slate-900 dark:text-white">
 
 
     </div>
 
-    <footer class="w-full bg-gray-50 text-black p-4 text-center">
+    <footer class="w-full bg-gray-50 text-black p-4 pt-8 text-center dark:text-white dark:bg-slate-900">
         <p>&copy; 2025 My Video Site</p>    
     </footer>
         
